2010-02-21  Yuta Kitamura  <yutak@chromium.org>

Reviewed by Darin Adler.

        HashMapTranslatorAdapter::translate() needs to set the mapped value.

        HTTPHeaderMap::add(const char*, const String&) does not work
        https://bugs.webkit.org/show_bug.cgi?id=35227

        * wtf/HashMap.h:
        (WTF::HashMapTranslatorAdapter::translate):

Canonical link: https://commits.webkit.org/46371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55068 268f45cc-cd09-0410-ab3c-d52691b4dbfc